fixed header links & spacing

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ h1 {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  width: fit-content;
+  /* width: fit-content; */
 }
 
 .search {
@@ -197,15 +197,6 @@ h1 {
   justify-content: center;
 }
 
-/* .header {
-  width: 100%;
-  text-align: center;
-}
-
-.header h1 {
-  text-align: center;
-} */
-
 .lds-spinner {
   color: official;
   display: inline-block;
@@ -292,24 +283,10 @@ h1 {
 }
 
 .detail {
+  padding: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.detail h1 {
-  margin-bottom: 0.8rem;
-  font-size: 2rem;
-  letter-spacing: 0.9px;
-  background: linear-gradient(
-    180deg,
-    rgba(249, 211, 180, 1) 0%,
-    rgba(249, 211, 180, 0.5) 100%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  width: fit-content;
 }
 
 .detail h2 {
@@ -335,7 +312,7 @@ h1 {
   color: #fff;
 }
 
-.detail a {
+.imdb-link {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
   font-style: italic;
@@ -346,10 +323,6 @@ h1 {
   margin: 0.5rem;
   background-color: #343739;
   border-radius: 1rem;
-}
-
-.heart {
-  cursor: pointer;
 }
 
 .bookmark {
@@ -380,6 +353,7 @@ h1 {
 }
 
 .favorites {
+  padding: 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -405,6 +379,15 @@ h1 {
 .favorites li {
   display: flex;
   align-items: center;
+  width: 500px;
+}
+
+.favorites .title-note {
+  width: 100%;
+}
+
+.favorites .note {
+  width: 100%;
 }
 
 .favorites .note {
@@ -421,6 +404,12 @@ h1 {
 
 @media screen and (max-width: 600px) {
   .app {
+    padding: 4rem 2rem;
+  }
+  .favorites {
+    padding: 4rem 2rem;
+  }
+  .detail {
     padding: 4rem 2rem;
   }
 
@@ -441,6 +430,12 @@ h1 {
 
 @media screen and (max-width: 400px) {
   .app {
+    padding: 4rem 1rem;
+  }
+  .favorites {
+    padding: 4rem 1rem;
+  }
+  .detail {
     padding: 4rem 1rem;
   }
 
